k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-management-be
  labels:
    app: health-management-be
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: health-management-be
      version: v1
  template:
    metadata:
      labels:
        app: health-management-be
        version: v1
    spec:
      serviceAccountName: health-management-be-service-account
      containers:
      - name: health-management-be
        image: docker.io/duynguyen03/health-management-be:v2.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
